@@ -57,3 +57,6 @@ SVN 518 (1.91):
 SVN 519
 - Change default mode for Freq and Summary Screen
 - Improve Summary Screen for cpus with more then 7 cores
+SVN 520 (1.9.2)
+- Disable monitoring CPUs frequencies with the option -df
+- Improve Summary Screen without CPUs frequencies
